[package]
name = "ne-g3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.1.0"
cfg-if = "1"
#futures = "0.3"
log = "0.4.17"
env_logger = "0.9"
num_enum = "0.5.7"
# crossbeam = "0.8.1"
# crossbeam-channel = "0.5.4"
flume = "0.10.13"
clap = "3.1.18"
thiserror="1.0.31"
lazy_static = "1.4.0"

aes = { version = "0.7.5", features = ["force-soft"] }
eax = "0.4.1"
# aes = "*"
# eax = "*"
cmac = "0.6.0"

rand = "*"
config = "*"
serde = "*"
serde_derive = "*"


# smoltcp = {path = "../../libs/smoltcp", default-features= true}

smoltcp = {git="https://github.com/smoltcp-rs/smoltcp.git", default-features = false, features = ["std", "log", # needed for `cargo test --no-default-features --features default` :/
  "medium-ethernet", "medium-ip", "medium-ieee802154",
  "phy-raw_socket", "phy-tuntap_interface",
  "proto-ipv4", "proto-igmp", "proto-dhcpv4", "proto-ipv6", "proto-dns",
  "proto-ipv4-fragmentation", "proto-ipv6",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dhcpv4", "socket-dns",
  "async"]}