[package]
name = "ne-g3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.1.0"
cfg-if = "1"
#futures = "0.3"
log = "0.4.17"
env_logger = "0.10.0"
num_enum = "0.5.7"
# crossbeam = "0.8.1"
# crossbeam-channel = "0.5.4"
flume = "0.10.13"
clap = { version = "4.1.6", features = ["derive"] }
lazy_static = "1.4.0"
anyhow = "1.0.69"

aes = { version = "~0.8" }
eax = "~0.5"
cmac = "~0.7"

rand = "^0.8"
config = "^0.13"
serde = "^1.0"
serde_derive = "^1.0"
byteorder = "^1.4"

nefsm = "0.1.0"
# neutils = "0.1.1"
neutils = {path = "../libs/ne-utils/neutils"}

# tun-tap = {path="../../libs/tuntap"}
pnet_packet = "*"
libc = "0.2"

actix-web = {version = "4.3"}
actix-cors = "0.6.4"

tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "time"] }

[build-dependencies]
cc = "~1"

# smoltcp = {path = "../../libs/smoltcp", default-features= true}

# smoltcp = {git="https://github.com/smoltcp-rs/smoltcp.git", default-features = false, features = ["std", "log", # needed for `cargo test --no-default-features --features default` :/
#   "medium-ethernet", "medium-ip", "medium-ieee802154",
#   "phy-raw_socket", "phy-tuntap_interface",
#   "proto-ipv4", "proto-igmp", "proto-dhcpv4", "proto-ipv6", "proto-dns",
#   "proto-ipv4-fragmentation", "proto-ipv6",
#   "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dhcpv4", "socket-dns",
#   "async"]}